# proxytavern

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/proxytavern/: package.json
apps/proxytavern/apps/proxytavern/data/: state.json
apps/proxytavern/src/: jsonpath-lite.js  server.js  store.js
apps/proxytavern/test/: config-api.test.js  ui-config.test.js
apps/proxytavern/web/: index.html
apps/st-extension/: README.md  package.json
docs/: ac-mapping-evidence.md  acceptance-criteria.md  architecture.md  operator-playbook.md  phase-b-implementation-plan.md  phase-c-release-plan.md  phase-c-release-readiness-report.md  prd.md  schema-migration-contract.md  scope.md  spec-contained-st-pt-ui-config-autorules.md  spec-streaming-ui-token.md  st-extension-changelog.md
projects/proxytavern/tests/: test_http_api.py
scripts/: gh-review-reply.py  git-preflight.sh  pr-ready.sh  validate_st_extension.py
src/proxytavern/: __init__.py  api.py  app.py  core.py
src/proxytavern.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
st-extension/: README.md  index.js  manifest.json  settings.json
tests/: test_http_api.py  test_queue_lifecycle.py  test_runtime_config.py  test_st_extension_package.py
